# BDS_Agent

./: .env  README.md  pyproject.toml  scratch_test.py
app/: config.py  dependencies.py  main.py
app/api/: __init__.py  routes.py
app/graph/: nodes.py  state.py  workflow.py
app/prompts/: clarification.txt  editor.txt  extractor.txt  goal_detector.txt  missing_info_detector.txt  persona_detector.txt  strategist.txt  validator.txt  writer.txt
app/schemas/: agent_structures.py  api_models.py  extracted_property.py
app/services/: llm.py
frontend/: app.py
tests/: test_agent_workflow.py
